Tweak - Fix gallery and social links alignment CSS

--- a/style.css
+++ b/style.css
@@ -570,6 +570,15 @@ p {
     margin: 0 0 30px;
 }
 
+/*--------------------------------------------------------------
+Gutenberg Blocks Layout.
+--------------------------------------------------------------*/
+.wp-block-gallery.alignleft, .wp-block-gallery.alignright, .wp-block-gallery.aligncenter,
+.wp-block-social-links.alignleft,
+.wp-block-social-links.alignright,
+.wp-block-social-links.aligncenter {
+	display: flex;
+}
 
 /* Social menu */
 
